# gtext

./: .codecov.yml  .gitignore  .readthedocs.yaml  .readthedocs.yml  CLAUDE.md  LICENSE  PROJECT_DOCUMENTATION.md  QUICKSTART-SECURITY.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  publish.yml  test.yml
assets/: README.md
docs/: architecture.md  attribution.md  changelog.md  contributing.md  index.md  installation.md  license.md  quickstart.md
docs/api/: cli.md  extensions.md  processor.md
docs/examples/: code.md  documentation.md  reports.md
docs/extensions/: custom.md  include.md  index.md
docs/guide/: basic.md  cli.md  configuration.md  extensions.md
examples/cli-help/: EXAMPLE.md  README.md.gtext  my_tool.py
examples/simple/: README.md  english-text.md  footer.md  header.md  hello.md  hello.md.gtext  long-article.md  project-structure.md  project-structure.md.gtext  template.md.gtext  test-expand.md  test-expand.md.gtext  test-ls.md  test-ls.md.gtext  test-protocols.md  test-protocols.md.gtext  test-tldr.md.gtext  test-translate.md.gtext
gtext/: __init__.py  ai.py  cli.py  config.py  metadata.py  processor.py  server.py
gtext/extensions/: __init__.py  base.py  include.py
gtext_src/: architecture.md.gtext  overview.md.gtext  project_documentation.md.gtext
notebooks/: 00_getting_started.ipynb  01_cli_and_patterns.ipynb  01_rag_prompt_engineering.ipynb  README.md
scripts/: test-local.sh
tests/: __init__.py  conftest.py  test_cli.py  test_cli_functions.py  test_cli_security.py  test_config.py  test_include_ai.py  test_include_ai_errors.py  test_include_errors.py  test_metadata.py  test_processor.py  test_security_integration.py  test_server.py
